--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://localhost:3306/prjibike?serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=root123
+spring.jpa.show-sql = true
+spring.datasource.validationQuery = SELECT 1
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
