--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=root123
 spring.jpa.show-sql = true
 spring.datasource.validationQuery = SELECT 1
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+spring.jackson.serialization.fail-on-empty-beans=false
