--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
+#Mysql
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/prjibike?serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=root123
-spring.jpa.show-sql = true
-spring.datasource.validationQuery = SELECT 1
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
-spring.jackson.serialization.fail-on-empty-beans=false
+#Exibe os comandos SQL
+spring.jpa.properties.hibernate.show_sql = true
+spring.jpa.properties.hibernate.use_sql_comments = true
+spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.properties.hibernate.type = trace
