--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
+git:
+  depth: 3
 language: java
-sudo: true
-dist: trusty
-jdk: oraclejdk8
-addons:
-  apt:
-    packages:
-      - oracle-java8-installer
+jdk:
+  - oraclejdk8
 before_install:
   - chmod +x mvnw
