--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Mysql
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/prjibike?serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=root123
@@ -10,3 +10,7 @@ spring.jpa.properties.hibernate.show_sql = true
 spring.jpa.properties.hibernate.use_sql_comments = true
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.properties.hibernate.type = trace
+
+#Flyway
+spring.flyway.locations=classpath:/db/migration/mysql
+
