--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,6 @@ spring.jpa.properties.hibernate.type = trace
 
 #Flyway
 spring.flyway.locations=classpath:/db/migration/mysql
+spring.flyway.baseline-on-migrate = true
+
 
