--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,12 @@ jdk:
   - openjdk8
 before_install:
   - chmod +x mvnw
+  -
+script:
+  - jdk_switcher use oraclejdk8
+  - export JAVA_HOME=$HOME/openjdk8
+  - $TRAVIS_BUILD_DIR/install-jdk.sh --install openjdk8 --target $JAVA_HOME
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
