--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
-language: java
-jdk:
-  - openjdk8
-before_install:
-  - chmod +x mvnw
-  -
-script:
-  - jdk_switcher use oraclejdk8
-  - export JAVA_HOME=$HOME/openjdk8
-  - $TRAVIS_BUILD_DIR/install-jdk.sh --install openjdk8 --target $JAVA_HOME
+    jdk:
+      - openjdk8
+    install:
+      - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+    before_install:
+      - chmod +x mvnw
+    script:
+      - mvn test
