--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/prjibike?serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
+spring.datasource.password=root123
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 #Exibe os comandos SQL
 spring.jpa.properties.hibernate.show_sql = true
@@ -14,9 +14,5 @@ spring.jpa.properties.hibernate.type = trace
 #Flyway
 spring.flyway.locations=classpath:/db/migration/mysql
 spring.flyway.baseline-on-migrate = true
-
-#JackSon
-
-
 
 
