--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,13 @@
 #Mysql
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/prjibike?serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=root
-spring.datasource.password=root123
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.datasource.url=mysql://bf30e1b56b9a6d:3d372b5c@us-cdbr-iron-east-01.cleardb.net/heroku_43e5c6a209ba032?reconnect=true
 
 #Exibe os comandos SQL
 spring.jpa.properties.hibernate.show_sql = true
 spring.jpa.properties.hibernate.use_sql_comments = true
 spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.properties.hibernate.type = trace
+spring.jpa.properties.hibernate.type = info
 
-#Flyway
-spring.flyway.locations=classpath:/db/migration/mysql
-spring.flyway.baseline-on-migrate = true
+
 
 
