--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.jpa.properties.hibernate.use_sql_comments = true
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.properties.hibernate.type = info
 
-
+#Flyway
+spring.flyway.locations=classpath:/db/migration/mysql
+spring.flyway.baseline-on-migrate = true
 
 
