--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,9 @@
-#Mysql
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=mysql://bf30e1b56b9a6d:3d372b5c@us-cdbr-iron-east-01.cleardb.net/heroku_43e5c6a209ba032?reconnect=true
 
-#Exibe os comandos SQL
-spring.jpa.properties.hibernate.show_sql = true
-spring.jpa.properties.hibernate.use_sql_comments = true
-spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.properties.hibernate.type = info
-
-#Flyway
-spring.flyway.locations=classpath:/db/migration/mysql
-spring.flyway.baseline-on-migrate = true
-
+# exibe os comandos SQL
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.type=info
 
