--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=mysql://bf30e1b56b9a6d:3d372b5c@us-cdbr-iron-east-01.cleardb.net/heroku_43e5c6a209ba032?reconnect=true
 
 # exibe os comandos SQL
