--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=mysql://bf30e1b56b9a6d:3d372b5c@us-cdbr-iron-east-01.cleardb.net/heroku_43e5c6a209ba032?reconnect=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # exibe os comandos SQL
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.type=info
+
 
