--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
+#Mysql
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=mysql://bf30e1b56b9a6d:3d372b5c@us-cdbr-iron-east-01.cleardb.net/heroku_43e5c6a209ba032?reconnect=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL55Dialect
+spring.datasource.url=jdbc:mysql:us-cdbr-iron-east-01.cleardb.net/heroku_43e5c6a209ba032?reconnect=true
+spring.datasource.username=bf30e1b56b9a6d
+spring.datasource.password=3d372b5c
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
-# exibe os comandos SQL
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
-spring.jpa.properties.hibernate.format_sql=false
-spring.jpa.properties.hibernate.type=info
+#Exibe os comandos SQL
+spring.jpa.properties.hibernate.show_sql = true
+spring.jpa.properties.hibernate.use_sql_comments = true
+spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.properties.hibernate.type = trace
 
 
