--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,16 @@
 #Mysql
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql:us-cdbr-iron-east-01.cleardb.net/heroku_43e5c6a209ba032?reconnect=true
+spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-01.cleardb.net/heroku_43e5c6a209ba032?serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=bf30e1b56b9a6d
 spring.datasource.password=3d372b5c
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL55Dialect
 
 #Exibe os comandos SQL
 spring.jpa.properties.hibernate.show_sql = true
 spring.jpa.properties.hibernate.use_sql_comments = true
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.properties.hibernate.type = trace
+
+
 
 
