--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 #Mysql
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-01.cleardb.net/heroku_43e5c6a209ba032?serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=bf30e1b56b9a6d
-spring.datasource.password=3d372b5c
+spring.datasource.url=jdbc:mysql://ofcmikjy9x4lroa2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/cdqdoekg3t4qp1wp?serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=c1r0uhlhsngn8k82
+spring.datasource.password=ehyhq57ddfsfg756
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL55Dialect
+
 
 #Exibe os comandos SQL
 spring.jpa.properties.hibernate.show_sql = true
