--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Mysql
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-01.cleardb.net/heroku_e3ebfe37e75d7b8?serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=b46a01d2f2f4c8
 spring.datasource.password=7b50bc98
