--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,7 @@
       - chmod +x mvnw
     script:
       - mvn test
+    deploy:
+      provider: heroku
+      api_key:
+      secure: "5ade8704-ce2c-4ce7-bdf3-07cf6d460fd6"
