--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@
       - chmod +x mvnw
     script:
       - mvn test
+      - travis encrypt 5ade8704-ce2c-4ce7-bdf3-07cf6d460fd6 --add deploy.api_key --pro
     deploy:
           provider: heroku
           api_key:
