--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@
       - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
     before_install:
       - chmod +x mvnw
+      - sudo apt-get update
+      - sudo apt-get -y install libxml2-dev
     script:
       - mvn test
       - travis encrypt 5ade8704-ce2c-4ce7-bdf3-07cf6d460fd6 --add deploy.api_key --pro
