--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@
       - chmod +x mvnw
       - sudo apt-get update
       - sudo apt-get -y install libxml2-dev
+      - sudo gem install travis
     script:
-      - mvn test
       - travis encrypt 5ade8704-ce2c-4ce7-bdf3-07cf6d460fd6 --add deploy.api_key --pro
     deploy:
           provider: heroku
